--- a/src/app/enseignants/enseignants.component.html
+++ b/src/app/enseignants/enseignants.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="card p-4 shadow-lg bg-white" style="width: 100%; max-width: 800px;">
+ <div class="card p-4 shadow-lg bg-white" style="width: 100%; max-width: 800px;">
     <h2 class="text-center mb-4">Ajouter un Enseignant</h2>
     <form (ngSubmit)="ajouterEnseignant()" #enseignantForm="">
       <div class="row">
@@ -73,4 +73,4 @@
       </button>
     </form>
   </div>
-   -->
+   
