--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,9 +1,9 @@
-<nav class="navbar">
-    <div class="logo">Ensitech</div>
-    <ul class="nav-links">
-      <li><a href="/home">Accueil</a></li>
-      <li><a href="/contact">À propos</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </nav>
-  
+<div class="navbar">
+  <div class="logo">Ensitech</div>
+  <ul class="nav-links">
+    <li><a href="/home">Accueil</a></li>
+    <li><a href="/about">À propos</a></li>
+    <li><a href="/contact">Contact</a></li>
+    <li><a href="/login">Connexion</a></li>
+  </ul>
+</div>
