--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,34 +1,24 @@
-<div class="d-flex flex-column vh-100 bg-dark text-white p-3 sidebar">
-    <ul class="nav nav-pills flex-column mb-auto">
-      <li class="nav-item">
-        <a href="#" class="nav-link text-white">
-        </a>
-      </li>
-      <li>
-        <a href="/etudiant" class="nav-link text-white">
-          <i class="fas fa-user-graduate me-2"></i> Étudiants
-        </a>
-      </li>
-      <li>
-        <a href="/enseignants" class="nav-link text-white">
-          <i class="fas fa-chalkboard-teacher me-2"></i> Enseignants
-        </a>
-      </li>
-      <li>
-        <a href="/cours" class="nav-link text-white">
-          <i class="fas fa-book me-2"></i> Cours
-        </a>
-      </li>
-      <li>
-          <a href="/responsable" class="nav-link text-white">
-            <i class="fas fa-book me-2"></i> Responsable
-          </a>
-        </li>
-        <li>
-        <a href="/statistque" class="nav-link text-white">
-          <i class="fas fa-chart-bar me-2"></i> Statistiques
-        </a>
-      </li>
-    </ul>
-  </div>
-  
+<div class="sidebar">
+  <ul class="nav">
+    <li class="nav-item">
+      <a href="/etudiant"><i class="fas fa-user-graduate"></i> Étudiants</a>
+    </li>
+    <li class="nav-item">
+      <a href="/enseignants"><i class="fas fa-chalkboard-teacher"></i> Enseignants</a>
+    </li>
+    <li class="nav-item">
+      <a href="/cours"><i class="fas fa-book"></i> Cours</a>
+    </li>
+    <li class="nav-item">
+      <a href="/responsable"><i class="fas fa-user-tie"></i> Responsable</a>
+    </li>
+    <li class="nav-item">
+      <a href="/statistiques"><i class="fas fa-chart-bar"></i> Statistiques</a>
+    </li>
+  </ul>
+</div>
+
+<div class="main-content">
+  <h1>Bienvenue sur le portail Ensitech</h1>
+  <p>Voici le contenu principal de votre application.</p>
+</div>
