--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,9 +1,7 @@
-<div class="navbar">
-  <div class="logo">Ensitech</div>
-  <ul class="nav-links">
-    <li><a href="/home">Accueil</a></li>
-    <li><a href="/about">À propos</a></li>
-    <li><a href="/contact">Contact</a></li>
-    <li><a href="/login">Connexion</a></li>
+<nav class="navbar">
+  <a routerLink="/home" class="navbar-brand">Logo</a>
+  <ul class="navbar-nav">
+    <li><a routerLink="/about">À propos</a></li>
+    <li><a routerLink="/login">Connexion</a></li>
   </ul>
-</div>
+</nav>
