--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,18 @@
-<div class="d-flex">
-    <!-- Sidebar -->
-    <app-sidebar></app-sidebar>
-    
-    <!-- Main Content -->
-    <div class="main-content flex-grow-1 d-flex flex-column">
-      <!-- Navbar -->
-      <app-navbar></app-navbar>
+<div class="d-flex vh-100">
+  <!-- Sidebar -->
+  <app-sidebar></app-sidebar>
   
-      
-      <!-- Page Content -->
-      <div class="content-container flex-grow-1 d-flex align-items-center justify-content-center">
-        <router-outlet></router-outlet>
-      </div>
-      
-      <!-- Footer -->
-      <app-footer></app-footer>
+  <!-- Main Content -->
+  <div class="main-content flex-grow-1 d-flex flex-column">
+    <!-- Navbar -->
+    <app-navbar class="navbar"></app-navbar>
+
+    <!-- Page Content -->
+    <div class="content-container flex-grow-1 d-flex align-items-center justify-content-center">
+      <router-outlet></router-outlet>
     </div>
+    
+    <!-- Footer -->
+    <app-footer class="footer"></app-footer>
   </div>
+</div>
