--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,32 @@
-<div class="d-flex vh-100">
+<div class="d-flex">
   <!-- Sidebar -->
-  <app-sidebar></app-sidebar>
-  
-  <!-- Main Content -->
-  <div class="main-content flex-grow-1 d-flex flex-column">
-    <!-- Navbar -->
-    <app-navbar class="navbar"></app-navbar>
+  <div class="sidebar">
+    <ul class="nav">
+      <li class="nav-item">
+        <a routerLink="/etudiant"><i class="fas fa-user-graduate"></i> Étudiants</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="/enseignants"><i class="fas fa-chalkboard-teacher"></i> Enseignants</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="/cours"><i class="fas fa-book"></i> Cours</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="/responsable"><i class="fas fa-user-tie"></i> Responsable</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="/ statistique"><i class="fas fa-chart-bar"></i> Statistiques</a>
+      </li>
+    </ul>
+  </div>
 
+  <!-- Main Content -->
+  <div class="main-content" style="flex-grow: 1;">
+    <!-- Navbar -->
+    <app-navbar></app-navbar>
     <!-- Page Content -->
-    <div class="content-container flex-grow-1 d-flex align-items-center justify-content-center">
-      <router-outlet></router-outlet>
+    <div class="content-container">
+      <router-outlet></router-outlet> <!-- Ceci est l'endroit où le contenu change -->
     </div>
-    
-    <!-- Footer -->
-    <app-footer class="footer"></app-footer>
   </div>
 </div>
