--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
       <a href="/etudiant"><i class="fas fa-user-graduate"></i> Étudiants</a>
     </li>
     <li class="nav-item">
-      <a href="/enseignants"><i class="fas fa-chalkboard-teacher"></i> Enseignants</a>
+      <a href="/enseignant"><i class="fas fa-chalkboard-teacher"></i> Enseignants</a>
     </li>
     <li class="nav-item">
       <a href="/cours"><i class="fas fa-book"></i> Cours</a>
@@ -16,9 +16,4 @@
       <a href="/statistiques"><i class="fas fa-chart-bar"></i> Statistiques</a>
     </li>
   </ul>
-</div>
-
-<div class="main-content">
-  <h1>Bienvenue sur le portail Ensitech</h1>
-  <p>Voici le contenu principal de votre application.</p>
 </div>
