--- a/src/app/statistique/statistique.component.html
+++ b/src/app/statistique/statistique.component.html
@@ -1,1 +1,12 @@
-<p>statistique works!</p>
+<!-- statistiques.component.html -->
+<div>
+    <h1>Statistiques</h1>
+    
+    <!-- Afficher les effectifs des filières -->
+    <ul *ngIf="statistiques">
+      <li *ngFor="let item of statistiques.effectifs">
+        {{ item.filiere }} : {{ item.nombre }}
+      </li>
+    </ul>
+  </div>
+  
