--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,20 +1,19 @@
 <div class="sidebar">
   <ul class="nav">
- 
     <li class="nav-item">
-      <a href="/enseignant"><i class="fas fa-chalkboard-teacher"></i> Enseignants</a>
+      <a routerLink="/enseignant"><i class="fas fa-chalkboard-teacher"></i> Enseignants</a>
     </li>
     <li class="nav-item">
-      <a href="/cours"><i class="fas fa-book"></i> Cours</a>
+      <a routerLink="/cours"><i class="fas fa-book"></i> Cours</a>
     </li>
     <li class="nav-item">
-      <a href="/etudiant"><i class="fas fa-user-graduate"></i> Étudiants</a>
+      <a routerLink="/etudiant"><i class="fas fa-user-graduate"></i> Étudiants</a>
     </li>
     <li class="nav-item">
-      <a href="/responsable"><i class="fas fa-user-tie"></i> Responsable</a>
+      <a routerLink="/responsable"><i class="fas fa-user-tie"></i> Responsable</a>
     </li>
     <li class="nav-item">
-      <a href="/statistiques"><i class="fas fa-chart-bar"></i> Statistiques</a>
+      <a routerLink="/statistiques"><i class="fas fa-chart-bar"></i> Statistiques</a>
     </li>
   </ul>
 </div>
