projet angular version finale last

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -37,10 +37,10 @@
     <div class="links-section">
       <h2>Accès rapide</h2>
       <div class="links">
-        <a routerLink="/cours" class="link-card">Gérer les cours</a>
-        <a routerLink="/etudiants" class="link-card">Gérer les étudiants</a>
-        <a routerLink="/connexion" class="link-card">Connexion</a>
-        <a routerLink="/creer-compte" class="link-card">Créer un compte</a>
+        <a routerLink="/cours" class="btn btn-primary mx-3" >Gérer les cours</a>
+        <a routerLink="/etudiants" class="btn btn-primary mx-3">Gérer les étudiants</a>
+        <a routerLink="/connexion" class="btn btn-primary mx-3">Connexion</a>
+        <a routerLink="/creer-compte" class="btn btn-primary">Créer un compte</a>
       </div>
     </div>
   </div>
