--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,12 +2,12 @@
   <div class="container-fluid">
     <!-- Logo -->
     <a class="navbar-brand" href="#">
-      <img src="assets/img/logi.jpeg" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
+      <img src="assets/img/logi.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
       Ensitech
     </a>
     <!-- Dropdown Connexion -->
     <div class="dropdown">
-      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+      <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
         Connexion
       </button>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
