--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,9 +10,13 @@
       </li>
       <li class="nav-item">
         <a routerLink="/cours"><i class="fas fa-book"></i> Cours</a>
-      </li>
+      </li> <br><br><br>
       <li class="nav-item">
         <a routerLink="/responsable"><i class="fas fa-user-tie"></i> Responsable</a>
+      </li>
+    
+      <li class="nav-item">
+        <a routerLink="/etudiant"><i class="fas fa-user-graduate"></i> Étudiants</a>
       </li>
       <li class="nav-item">
         <a routerLink="/statistique"><i class="fas fa-chart-bar"></i> Statistiques</a>
