--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,11 +10,10 @@
       </li>
       <li class="nav-item">
         <a routerLink="/cours"><i class="fas fa-book"></i> Cours</a>
-      </li> <br><br><br>
+      </li> 
       <li class="nav-item">
-        <a routerLink="/responsable"><i class="fas fa-user-tie"></i> Responsable</a>
+        <a routerLink="/notes"><i class="fas fa-pencil-alt"></i> Notes</a>
       </li>
-    
       <li class="nav-item">
         <a routerLink="/etudiant"><i class="fas fa-user-graduate"></i> Étudiants</a>
       </li>
