--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,16 +4,34 @@
     <form (ngSubmit)="login()" #loginForm="ngForm">
       <div class="mb-3">
         <label for="email" class="form-label">Email</label>
-        <input type="email" id="email" name="email" [(ngModel)]="email" class="form-control" required />
+        <input
+          type="email"
+          id="email"
+          name="email"
+          [(ngModel)]="email"
+          class="form-control"
+          required
+        />
       </div>
       <div class="mb-3">
         <label for="password" class="form-label">Mot de passe</label>
-        <input type="password" id="password" name="password" [(ngModel)]="password" class="form-control" required />
+        <input
+          type="password"
+          id="password"
+          name="password"
+          [(ngModel)]="password"
+          class="form-control"
+          required
+        />
       </div>
-      <button type="submit" class="btn btn-primary w-100" [disabled]="loginForm.invalid" routerLink="/home">Connexion</button>
+      <button
+        type="submit"
+        class="btn btn-primary w-100"
+        [disabled]="loginForm.invalid"
+      >
+        Connexion
+      </button>
     </form>
-    <p class="text-center mt-3">Pas encore de compte ? <a routerLink="/register" class="text-primary">Créer un compte</a></p>
-    <div *ngIf="errorMessage" class="text-danger">{{ errorMessage }}</div>
-    <div *ngIf="successMessage" class="text-success">{{ successMessage }}</div>
+    <div *ngIf="errorMessage" class="text-danger mt-3">{{ errorMessage }}</div>
   </div>
 </div>
