--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -15,5 +15,10 @@
     <li class="nav-item">
       <a routerLink="/statistiques"><i class="fas fa-chart-bar"></i> Statistiques</a>
     </li>
+    
+    <!-- Lien vers Notes -->
+    <li class="nav-item">
+      <a routerLink="/notes"><i class="fas fa-pencil-alt"></i> Notes</a>
+    </li>
   </ul>
 </div>
